syntax = "proto3";
package openim.admin;

import "common/common.proto";
import "sdkws/sdkws.proto";
import "wrapperspb/wrapperspb.proto";

option go_package = "github.com/openimsdk/chat/pkg/protocol/admin";

// login
message LoginReq {
  string account = 1;
  string password = 2;
  string code = 3;
}

message LoginResp {
  string adminAccount = 1;
  string adminToken = 2;
  string nickname = 3;
  string faceURL = 4;
  int32 level = 5;
  string adminUserID = 6;
}

message AddAdminAccountReq {
  string account = 1;
  string password = 2;
  string faceURL = 3;
  string nickname = 4;
}

message AddAdminAccountResp {}

message AdminUpdateInfoReq {
  openim.protobuf.StringValue account = 1;
  openim.protobuf.StringValue password = 2;
  openim.protobuf.StringValue faceURL = 3;
  openim.protobuf.StringValue nickname = 4;
  openim.protobuf.Int32Value level = 6;
}

message AdminUpdateInfoResp {
  string userID = 1;
  string nickname = 2;
  string faceURL = 3;
}

message ChangePasswordReq {
  string password = 1;
}

message ChangePasswordResp {}

message GetAdminInfoReq {}

message ChangeAdminPasswordReq {
  string userID = 1;
  string currentPassword = 2;
  string newPassword = 3;
}

message ChangeAdminPasswordResp {}

message DelAdminAccountReq {
  repeated string userIDs = 1;
}

message DelAdminAccountResp {}

message SearchAdminAccountReq {
  openim.sdkws.RequestPagination pagination = 2;
  string account = 3;
  string nickname = 4;
}

message SearchAdminAccountResp {
  uint32 total = 1;
  repeated GetAdminInfoResp adminAccounts = 2;
}

message GetAdminInfoResp {
  string account = 1;
  string faceURL = 2;
  string nickname = 3;
  string userID = 4;
  bool enableGoogleAuth = 5;
  int32 level = 6;
  int64 createTime = 7;
  repeated openim.chat.common.AdminMenu menus = 8;
}

// ################### Default Friend ###################

message AddDefaultFriendReq {
  repeated string userIDs = 1;
}

message AddDefaultFriendResp {}

message DelDefaultFriendReq {
  repeated string userIDs = 1;
}

message DelDefaultFriendResp {}

message FindDefaultFriendReq {}

message FindDefaultFriendResp {
  repeated string userIDs = 1;
}

message SearchDefaultFriendReq {
  string keyword = 1;
  openim.sdkws.RequestPagination pagination = 2;
}

message DefaultFriendAttribute {
  string userID = 1;
  int64 createTime = 2;
  openim.chat.common.UserPublicInfo user = 3;
}

message SearchDefaultFriendResp {
  uint32 total = 1;
  repeated DefaultFriendAttribute users = 2;
}

// ################### DefaultGroup ###################

message AddDefaultGroupReq {
  repeated string groupIDs = 1;
}

message AddDefaultGroupResp {}

message DelDefaultGroupReq {
  repeated string groupIDs = 1;
}

message DelDefaultGroupResp {}

message FindDefaultGroupReq {}

message FindDefaultGroupResp {
  repeated string groupIDs = 1;
}

message SearchDefaultGroupReq {
  string keyword = 1;
  openim.sdkws.RequestPagination pagination = 2;
}

message GroupAttribute {
  string groupID = 1;
  int64 createTime = 2;
  openim.sdkws.GroupInfo group = 3;
}

message SearchDefaultGroupResp {
  uint32 total = 1;
  repeated string groupIDs = 2;
}

// ################### InvitationCode ###################

message AddInvitationCodeReq {
  repeated string codes = 1;
}

message AddInvitationCodeResp {}

message GenInvitationCodeReq {
  int32 len = 1;
  int32 num = 2;
  string chars = 3;
}

message GenInvitationCodeResp {}

message FindInvitationCodeReq {
  repeated string codes = 1;
}

message FindInvitationCodeResp {
  repeated InvitationRegister codes = 1;
}

message UseInvitationCodeReq {
  string code = 1;
  string userID = 2;
}

message UseInvitationCodeResp {}

message DelInvitationCodeReq {
  repeated string codes = 1;
}

message DelInvitationCodeResp {}

message InvitationRegister {
  string invitationCode = 1;
  int64 createTime = 2;
  string usedUserID = 3;
  openim.chat.common.UserPublicInfo usedUser = 4;
}

message SearchInvitationCodeReq {
  int32 status = 1;
  repeated string userIDs = 2;
  repeated string codes = 3;
  string keyword = 4;
  openim.sdkws.RequestPagination pagination = 5;
}

message SearchInvitationCodeResp {
  uint32 total = 1;
  repeated InvitationRegister list = 2;
}

// ################### User Login IP Limit ###################

message SearchUserIPLimitLoginReq {
  string keyword = 1;
  openim.sdkws.RequestPagination pagination = 2;
}

message LimitUserLoginIP {
  string userID = 1;
  string ip = 2;
  int64 createTime = 3;
  openim.chat.common.UserPublicInfo user = 4;
}

message SearchUserIPLimitLoginResp {
  uint32 total = 1;
  repeated LimitUserLoginIP limits = 2;
}

message UserIPLimitLogin {
  string userID = 1;
  string ip = 2;
}

message AddUserIPLimitLoginReq {
  repeated UserIPLimitLogin limits = 1;
}

message AddUserIPLimitLoginResp {}

message DelUserIPLimitLoginReq {
  repeated UserIPLimitLogin limits = 1;
}

message DelUserIPLimitLoginResp {}

// ################### User IP Limit ###################

message IPForbidden {
  string ip = 1;
  bool limitRegister = 2;
  bool limitLogin = 3;
  int64 createTime = 4;
}

message IPForbiddenAdd {
  string ip = 1;
  bool limitRegister = 2;
  bool limitLogin = 3;
}

message SearchIPForbiddenReq {
  string keyword = 1;
  int32 status = 2;
  openim.sdkws.RequestPagination pagination = 3;
}

message SearchIPForbiddenResp {
  uint32 total = 1;
  repeated IPForbidden forbiddens = 2;
}

message AddIPForbiddenReq {
  repeated IPForbiddenAdd forbiddens = 1;
}
message AddIPForbiddenResp {}

message DelIPForbiddenReq {
  repeated string ips = 1;
}
message DelIPForbiddenResp {}

// ################### User Limit ###################
message CheckRegisterForbiddenReq {
  string ip = 1;
}

message CheckRegisterForbiddenResp {}

message CheckLoginForbiddenReq {
  string ip = 1;
  string userID = 2;
}

message CheckLoginForbiddenResp {}

// ################### login out ###################
message CancellationUserReq {
  string userID = 1;
  string reason = 2;
}

message CancellationUserResp {}

// ################### Block User, Unblock User ###################
message BlockUserReq {
  string userID = 1;
  string reason = 2;
}

message BlockUserResp {}

message UnblockUserReq {
  repeated string userIDs = 1;
}

message UnblockUserResp {}

message SearchBlockUserReq {
  string keyword = 1;
  openim.sdkws.RequestPagination pagination = 2;
}

message BlockUserInfo {
  string userID = 1;
  string account = 2;
  string phoneNumber = 3;
  string areaCode = 4;
  string email = 5;
  string nickname = 6;
  string faceURL = 7;
  int32 gender = 8;
  string reason = 9;
  string opUserID = 10;
  int64 createTime = 11;
}

message SearchBlockUserResp {
  uint32 total = 1;
  repeated BlockUserInfo users = 2;
}

message FindUserBlockInfoReq {
  repeated string userIDs = 1;
}

message BlockInfo {
  string userID = 1;
  string reason = 2;
  string opUserID = 3;
  int64 createTime = 4;
}

message FindUserBlockInfoResp {
  repeated BlockInfo blocks = 2;
}

// ################### TOKEN ###################

message CreateTokenReq {
  string userID = 1;
  int32 userType = 32;
}


message CreateTokenResp {
  string token = 1;
}


message ParseTokenReq {
  string token = 1;
}

message ParseTokenResp {
  string userID = 1;
  int32 userType = 2;
  int64 expireTimeSeconds = 3;
}

message InvalidateTokenReq {
  string userID = 1;
}

message InvalidateTokenResp {}

// ################### mini program ###################

message AddAppletReq {
  string id = 1;
  string name = 2;
  string appID = 3;
  string icon = 4;
  string url = 5;
  uint32 priority = 6;
  uint32 status = 7;
  int64 createTime = 8;
}

message AddAppletResp {}

message DelAppletReq {
  repeated string appletIds = 1;
}

message DelAppletResp {}

message UpdateAppletReq {
  string id = 1;
  openim.protobuf.StringValue name = 2;
  openim.protobuf.StringValue appID = 3;
  openim.protobuf.StringValue icon = 4;
  openim.protobuf.StringValue url = 5;
  openim.protobuf.UInt32Value priority = 6;
  openim.protobuf.UInt32Value status = 7;
  openim.protobuf.Int64Value createTime = 8;
}

message UpdateAppletResp {}

message FindAppletReq {}

message FindAppletResp {
  repeated openim.chat.common.AppletInfo applets = 1;
}

message SearchAppletReq {
  string keyword = 1;
  openim.sdkws.RequestPagination pagination = 2;
}

message SearchAppletResp {
  uint32 total = 1;
  repeated openim.chat.common.AppletInfo applets = 2;
}

message SetDefaultAppletReq {
  string appID = 1;
  uint32 isDefault = 2;
}

message SetDefaultAppletResp {
  uint32 isDefault = 1;
}

message GetAppletReq {
  string appID = 1;
}

message GetAppletResp {
  openim.chat.common.AppletInfo applet = 1;
}

message SetClientConfigReq {
  map<string, string> config = 1;
}

message SetClientConfigResp {}

message DelClientConfigReq {
  repeated string keys = 1;
}

message DelClientConfigResp {}

message GetClientConfigReq {}

message GetListClientConfigReq {}

message ClientConfigOption {
  string label = 1;
  string value = 2;
}

message ClientConfig {
  string key = 1;
  string value = 2;
  string label = 3;
  string type = 4;
  repeated ClientConfigOption options = 5;
  string desc = 6;
}

message GetListClientConfigResp {
  repeated ClientConfig configs = 1;
}


message GetClientConfigResp {
  map<string, string> config = 1;
}

message GetUserTokenReq {
  string userID = 1;
}

message GetUserTokenResp {
  map<string, int32> tokensMap = 1;
}

message LatestApplicationVersionReq {
  string platform = 2;
  string version = 3;
}

message LatestApplicationVersionResp {
  openim.chat.common.ApplicationVersion version = 1;
}

message AddApplicationVersionReq {
  string platform = 1;
  string version = 2;
  string url = 3;
  string text = 4;
  bool force = 5;
  bool latest = 6;
  bool hot = 7;
}

message AddApplicationVersionResp {

}

message UpdateApplicationVersionReq {
  string id = 1;
  openim.protobuf.StringValue platform = 2;
  openim.protobuf.StringValue version = 3;
  openim.protobuf.StringValue url = 4;
  openim.protobuf.StringValue text = 5;
  openim.protobuf.BoolValue force = 6;
  openim.protobuf.BoolValue latest = 7;
  openim.protobuf.BoolValue hot = 8;
}

message UpdateApplicationVersionResp {

}

message DeleteApplicationVersionReq {
  repeated string id = 1;
}

message DeleteApplicationVersionResp {

}

message PageApplicationVersionReq {
  repeated string platform = 1;
  openim.sdkws.RequestPagination pagination = 2;
}

message PageApplicationVersionResp {
  int64 total = 1;
  repeated openim.chat.common.ApplicationVersion versions = 2;
}

message GetGoogleAuthReq {

}

message GetGoogleAuthResp {
  string secret = 1;
  string qrCodeUrl = 2;
}

message VerifyGoogleAuthReq {
  string code = 1;
}

message VerifyGoogleAuthResp {
}

message GetUserLoginRecordReq {
}

message UserLoginRecord {
  string userID = 1;
  string IP = 2;
  string deviceName = 3;
  string deviceID = 4;
  string platform = 5;
  int64 loginTime = 6;
}

message GetUserLoginRecordResp {
  repeated UserLoginRecord records = 1;
}


message GetSmsConfigReq {}

message GetSmsConfigResp {
  map<string, string> config = 1;
}

message SetSmsConfigReq {
  map<string, string> config = 1;
}


message SetSmsConfigResp {}

message GetBucketConfigReq {
}

message GetBucketConfigResp {
  map<string, string> config = 1;
}

message SetBucketConfigReq {
  map<string, string> config = 1;
}

message SetBucketConfigResp {}


message ContinueSigninConfig {
  int32 day = 1;
  int64 increment = 2;
}

message SigninConfig {
  string signin_type = 1;
  int32 random_min = 2;
  int32 random_max = 3;
  string rule = 4;
  int64 daily_signin = 5;
  repeated ContinueSigninConfig continue_signin = 6;
}

message SetSigninConfigReq {
  SigninConfig config = 1;
}

message SetSigninConfigResp {}

message GetSigninConfigReq {}

message GetSigninConfigResp {
  SigninConfig config = 1;
}

message GetAdminMenuReq {}

message GetAdminMenuResp {
  repeated openim.chat.common.AdminMenu menus = 1;
}

message CreateAdminMenuReq {
  openim.protobuf.StringValue name = 2;
  openim.protobuf.StringValue path = 3;
  openim.protobuf.StringValue component = 4;
  openim.protobuf.StringValue icon = 5;
  openim.protobuf.Int32Value sort = 6;
  openim.protobuf.StringValue parent = 7;
  openim.protobuf.BoolValue layout = 8;
  openim.protobuf.BoolValue hiddenInMenu = 9;
  openim.protobuf.StringValue redirect = 10;
}

message CreateAdminMenuResp {}

message UpdateAdminMenuReq {
  string key = 1;
  openim.protobuf.StringValue name = 2;
  openim.protobuf.StringValue path = 3;
  openim.protobuf.StringValue component = 4;
  openim.protobuf.StringValue icon = 5;
  openim.protobuf.Int32Value sort = 6;
  openim.protobuf.StringValue parent = 7;
  openim.protobuf.BoolValue layout = 8;
  openim.protobuf.BoolValue hiddenInMenu = 9;
  openim.protobuf.StringValue redirect = 10;
}

message UpdateAdminMenuResp {}

message DeleteAdminMenuReq {
  repeated string keys = 1;
}

message DeleteAdminMenuResp {}

message TakeAdminMenuReq {
  string key = 1;
}

message TakeAdminMenuResp {
  openim.chat.common.AdminMenu menu = 1;
}

message ListAdminMenuReq {
  string parent = 1;
}

message ListAdminMenuResp {
  repeated openim.chat.common.AdminMenu menus = 1;
}

message ListAdminUserMenuReq {
  string userID = 1;
}

message ListAdminUserMenuResp {
  repeated openim.chat.common.AdminMenu menus = 1;
}

message GetAdminUserMenuReq {
  string userID = 1;
}

message GetAdminUserMenuResp {
  repeated openim.chat.common.AdminMenu menus = 1;
}

message AssignAdminUserMenuReq {
  string userID = 1;
  repeated string menus = 2;
}

message AssignAdminUserMenuResp {}


// ################### operation log ###################

message SearchOperationLogReq {
  string keyword = 1;
  openim.sdkws.RequestPagination pagination = 2;
}

message SearchOperationLogResp {
  int64 total = 1;
  repeated openim.chat.common.OperationLog logs = 2;
}

message GetOperationLogReq {
  string operationID = 1;
}

message GetOperationLogResp {
  openim.chat.common.OperationLog log = 1;
}

message DeleteOperationLogReq {
  repeated string operationIDs = 1;
}

message DeleteOperationLogResp {}

message CreateOperationLogReq {
  string operationID = 1;
  string adminID = 2;
  string adminAccount = 3;
  string adminName = 4;
  string module = 5;
  string operation = 6;
  string method = 7;
  string path = 8;
  string IP = 9;
  string requestData = 10;
  int64 createTime = 11;
}

message CreateOperationLogResp {}

service admin {
  // Login
  rpc Login(LoginReq) returns (LoginResp);
  rpc ChangePassword(ChangePasswordReq) returns (ChangePasswordResp);
  rpc AdminUpdateInfo(AdminUpdateInfoReq) returns (AdminUpdateInfoResp);
  // Get administrator information
  rpc GetAdminInfo(GetAdminInfoReq) returns (GetAdminInfoResp);
  rpc AddAdminAccount(AddAdminAccountReq) returns (AddAdminAccountResp);
  rpc ChangeAdminPassword(ChangeAdminPasswordReq) returns (ChangeAdminPasswordResp);
  rpc DelAdminAccount(DelAdminAccountReq) returns (DelAdminAccountResp);
  rpc SearchAdminAccount(SearchAdminAccountReq) returns (SearchAdminAccountResp);

  // Add Remove Get default friend list on registration
  rpc AddDefaultFriend(AddDefaultFriendReq) returns (AddDefaultFriendResp);
  rpc DelDefaultFriend(DelDefaultFriendReq) returns (DelDefaultFriendResp);
  rpc FindDefaultFriend(FindDefaultFriendReq) returns (FindDefaultFriendResp);
  rpc SearchDefaultFriend(SearchDefaultFriendReq) returns (SearchDefaultFriendResp);

  rpc AddDefaultGroup(AddDefaultGroupReq) returns (AddDefaultGroupResp);
  rpc DelDefaultGroup(DelDefaultGroupReq) returns (DelDefaultGroupResp);
  rpc FindDefaultGroup(FindDefaultGroupReq) returns (FindDefaultGroupResp);
  rpc SearchDefaultGroup(SearchDefaultGroupReq) returns (SearchDefaultGroupResp);

  // Invitation Code Generate Query Get
  rpc AddInvitationCode(AddInvitationCodeReq) returns (AddInvitationCodeResp);
  rpc GenInvitationCode(GenInvitationCodeReq) returns (GenInvitationCodeResp);
  rpc FindInvitationCode(FindInvitationCodeReq) returns (FindInvitationCodeResp);
  rpc UseInvitationCode(UseInvitationCodeReq) returns (UseInvitationCodeResp);
  rpc DelInvitationCode(DelInvitationCodeReq) returns (DelInvitationCodeResp);
  rpc SearchInvitationCode(SearchInvitationCodeReq) returns (SearchInvitationCodeResp);

  // User login ip limit Query Add Remove
  rpc SearchUserIPLimitLogin(SearchUserIPLimitLoginReq) returns (SearchUserIPLimitLoginResp);
  rpc AddUserIPLimitLogin(AddUserIPLimitLoginReq) returns (AddUserIPLimitLoginResp);
  rpc DelUserIPLimitLogin(DelUserIPLimitLoginReq) returns (DelUserIPLimitLoginResp);

  // Prohibit users from registering at certain ip Query Add Remove
  rpc SearchIPForbidden(SearchIPForbiddenReq) returns (SearchIPForbiddenResp);
  rpc AddIPForbidden(AddIPForbiddenReq) returns (AddIPForbiddenResp);
  rpc DelIPForbidden(DelIPForbiddenReq) returns (DelIPForbiddenResp);

  // User Management Related Add Block/Unblock Pull
  rpc CancellationUser(CancellationUserReq) returns (CancellationUserResp);
  rpc BlockUser(BlockUserReq) returns (BlockUserResp);
  rpc UnblockUser(UnblockUserReq) returns (UnblockUserResp);
  rpc SearchBlockUser(SearchBlockUserReq) returns (SearchBlockUserResp);
  rpc FindUserBlockInfo(FindUserBlockInfoReq) returns (FindUserBlockInfoResp);

  rpc CheckRegisterForbidden(CheckRegisterForbiddenReq) returns (CheckRegisterForbiddenResp);
  rpc CheckLoginForbidden(CheckLoginForbiddenReq) returns (CheckLoginForbiddenResp);

  // create token
  rpc CreateToken(CreateTokenReq) returns (CreateTokenResp);
  // parse token
  rpc ParseToken(ParseTokenReq) returns (ParseTokenResp);


  // app
  rpc AddApplet(AddAppletReq) returns (AddAppletResp);
  rpc DelApplet(DelAppletReq) returns (DelAppletResp);
  rpc UpdateApplet(UpdateAppletReq) returns (UpdateAppletResp);
  rpc FindApplet(FindAppletReq) returns (FindAppletResp);
  rpc SearchApplet(SearchAppletReq) returns (SearchAppletResp);
  rpc SetDefaultApplet(SetDefaultAppletReq) returns (SetDefaultAppletResp);
  rpc GetApplet(GetAppletReq) returns (GetAppletResp);

  // Client Configuration
  rpc GetClientConfig(GetClientConfigReq) returns (GetClientConfigResp);
  rpc GetListClientConfig(GetListClientConfigReq) returns (GetListClientConfigResp);
  rpc SetClientConfig(SetClientConfigReq) returns (SetClientConfigResp);
  rpc DelClientConfig(DelClientConfigReq) returns (DelClientConfigResp);

  rpc GetUserToken(GetUserTokenReq) returns (GetUserTokenResp);

  // invalidate token
  rpc InvalidateToken(InvalidateTokenReq) returns (InvalidateTokenResp);

  rpc LatestApplicationVersion(LatestApplicationVersionReq) returns (LatestApplicationVersionResp);
  rpc AddApplicationVersion(AddApplicationVersionReq) returns (AddApplicationVersionResp);
  rpc UpdateApplicationVersion(UpdateApplicationVersionReq) returns (UpdateApplicationVersionResp);
  rpc DeleteApplicationVersion(DeleteApplicationVersionReq) returns (DeleteApplicationVersionResp);
  rpc PageApplicationVersion(PageApplicationVersionReq) returns (PageApplicationVersionResp);

  rpc GetGoogleAuth(GetGoogleAuthReq) returns (GetGoogleAuthResp);
  rpc VerifyGoogleAuth(VerifyGoogleAuthReq) returns (VerifyGoogleAuthResp);

  rpc GetUserLoginRecord(GetUserLoginRecordReq) returns (GetUserLoginRecordResp);

  // sms config
  rpc GetSmsConfig(GetSmsConfigReq) returns (GetSmsConfigResp);
  rpc SetSmsConfig(SetSmsConfigReq) returns (SetSmsConfigResp);

  // bucket config
  rpc GetBucketConfig(GetBucketConfigReq) returns (GetBucketConfigResp);
  rpc SetBucketConfig(SetBucketConfigReq) returns (SetBucketConfigResp);

  // signin config
  rpc GetSigninConfig(GetSigninConfigReq) returns (GetSigninConfigResp);
  rpc SetSigninConfig(SetSigninConfigReq) returns (SetSigninConfigResp);

  // admin menu
  rpc CreateAdminMenu(CreateAdminMenuReq) returns (CreateAdminMenuResp);
  rpc UpdateAdminMenu(UpdateAdminMenuReq) returns (UpdateAdminMenuResp);
  rpc DeleteAdminMenu(DeleteAdminMenuReq) returns (DeleteAdminMenuResp);
  rpc TakeAdminMenu(TakeAdminMenuReq) returns (TakeAdminMenuResp);
  rpc ListAdminMenu(ListAdminMenuReq) returns (ListAdminMenuResp);
  rpc ListAdminUserMenu(ListAdminUserMenuReq) returns (ListAdminUserMenuResp);
  rpc AssignAdminUserMenu(AssignAdminUserMenuReq) returns (AssignAdminUserMenuResp);
  rpc GetAdminUserMenu(GetAdminUserMenuReq) returns (GetAdminUserMenuResp);

  // operation log
  rpc SearchOperationLog(SearchOperationLogReq) returns (SearchOperationLogResp);
  rpc GetOperationLog(GetOperationLogReq) returns (GetOperationLogResp);
  rpc DeleteOperationLog(DeleteOperationLogReq) returns (DeleteOperationLogResp);
  rpc CreateOperationLog(CreateOperationLogReq) returns (CreateOperationLogResp);
}
